# erpnext-docs

./: README.md  SUMMARY.md  pyproject.toml  requirements.txt
examples/: run_sample.sh
output/erpnext/: SUMMARY.md  mkdocs.yml
output/erpnext/meta/: assetmap.json  index.json  linkmap.json  state.json
output/erpnext/pages/erpnext/: Selling-in-different-UOM.md  accounting-dimensions.md  accounting-entries.md  accounting-of-inventory-stock.md  accounting-period.md  accounting-reports.md  accounts-settings.md  activity-cost.md  adding-margin.md  adding-users.md  additional-charges-in-payment.md  address-template.md  address.md  advance-in-separate-party-account.md  advance-payment-entry.md  allow-over-delivery-billing-against-sales-order-upto-certain-limit.md  amending-purchase-order-after-submit.md  amending-sales-order-after-submit.md  applying-discount.md  asset-category.md  asset-depreciation.md  asset-location.md  asset-maintenance-log.md  asset-maintenance-team.md  asset-maintenance.md  asset-movement.md  asset-repair.md  asset-shift-allocation.md  asset-value-adjustment.md  asset.md  assistance-sales-purchase-between-companies.md  auto-creation-of-material-request.md  (+341 more)
output/framework/: SUMMARY.md  mkdocs.yml
output/framework/meta/: assetmap.json  index.json  linkmap.json  state.json
scripts/: run_full_example.sh
src/erp_docs_mirror/: cli.py  config.py  converters.py  crawler.py  default_config.json  exporters.py  extractor.py  extractors.py  link_rewriter.py  markdown_tools.py  mirror.py  models.py  storage.py  translator.py  utils.py  validator.py
(+411 files in other folders)
